# EgoPeekApp

./: .gitignore  README.md  pyproject.toml
FrontEnd/: package-lock.json  package.json
FrontEnd/public/: index.html  manifest.json
FrontEnd/src/: App.js  env.json  index.css  index.js  util.js
FrontEnd/src/components/About/: About.css  About.js  MemberCard.js
FrontEnd/src/components/AboutUs/: AboutUs.js
FrontEnd/src/components/Account/: Account.css  Account.js  AddFriend.css  AddFriend.js  DisplaySocials.css  DisplaySocials.js  GameImages.js  GamePosts.css  GamePosts.js  Posts.js  Sidebar.css  Sidebar.js  SidebarIcon.js
FrontEnd/src/hooks/: useAuth.js  useAvatar.js  useFetch.js  useFetchFeed.js  useInfiniteScroll.js  useToken.js  useTokenID.js  useTokenName.js
backend/: README.md  env.example.py  main.py
backend/api/v1/: __init__.py  comment.py  discover.py  friend.py  game.py  hashtag.py  index.py  like.py  link.py  message.py  post.py  profile.py  tag.py  user.py
backend/auth/: __init__.py  authenticate.py  oauth.py
backend/auth/templates/: emails.html
backend/core/: __init__.py  config.py
backend/database/: __init__.py  db.py  db_comment.py  db_friend.py  db_game.py  db_hashtag.py  db_like.py  db_link.py  db_message.py  db_post.py  db_profile.py  db_tag.py  db_user.py  hash.py  models.py
backend/logo_images/: README.md
backend/schemas/: __init__.py  schema.py
backend/socket/: __init__.py  socket.py
backend/tests/: __init__.py  test_app.py
backend/user_avatars/: README.md
backend/user_images/: README.md
backend/user_videos/: README.md
(+106 files in other folders)
