[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["natebush707 <natebush707@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
SQLAlchemy = "^1.4.31"
mysqlclient = "^2.1.0"
mysql-connector = "^2.2.9"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
